mapped username with user_id

--- a/notebooks/creating_querying_db.ipynb
+++ b/notebooks/creating_querying_db.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -251,32 +251,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            id                 name\n",
-      "0  U05RA88PCPR                  sam\n",
-      "1  U05S28VB3ED                admin\n",
-      "2  U05S28X7ETB           payagude.m\n",
-      "3  U05TG4W1YUF         nikhil993477\n",
-      "4  U05TQLV3ZC4               satish\n",
-      "5  U05TTNUB27P           sajals1146\n",
-      "6  U05TZ4E0G5A  shubhangisharma2411\n",
-      "7  U05V4DFEHS8        tanushsethi55\n"
+      "            id                 name        real_name\n",
+      "0  U05RA88PCPR                  sam             None\n",
+      "1  U05S28VB3ED                admin             None\n",
+      "2  U05S28X7ETB           payagude.m  Mrunal Payagude\n",
+      "3  U05TG4W1YUF         nikhil993477     Nikhil Kumar\n",
+      "4  U05TQLV3ZC4               satish           Satish\n",
+      "5  U05TTNUB27P           sajals1146            Sajal\n",
+      "6  U05TZ4E0G5A  shubhangisharma2411        Shubhangi\n",
+      "7  U05V4DFEHS8        tanushsethi55    tanushsethi55\n"
      ]
     }
    ],
    "source": [
     "query = '''\n",
-    "SELECT id, name FROM users\n",
+    "SELECT id, name, real_name FROM users\n",
     "\n",
     "'''\n",
-    "result = query_database(database_file, query)\n",
-    "print(result)"
+    "user_id_to_name = query_database(database_file, query)\n",
+    "print(user_id_to_name)"
    ]
   },
   {
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1653,119 +1653,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>username</th>\n",
-       "      <th>text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>nikhil993477</td>\n",
-       "      <td>Nikhil Kumar joined Slack — take a second to s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>nikhil993477</td>\n",
-       "      <td>I am available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>nikhil993477</td>\n",
-       "      <td>Can we get on a call?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>nikhil993477</td>\n",
-       "      <td>I can join now !</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>nikhil993477</td>\n",
-       "      <td>&lt;@U05TQLV3ZC4&gt; are you available for meet?</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>nikhil993477</td>\n",
-       "      <td>I sent her your whatsapp</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>nikhil993477</td>\n",
-       "      <td>She will text</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>nikhil993477</td>\n",
-       "      <td>&lt;@U05TG4W1YUF&gt; has joined the channel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>nikhil993477</td>\n",
-       "      <td>&lt;@U05TG4W1YUF&gt; has joined the channel</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>nikhil993477</td>\n",
-       "      <td>&lt;@U05TG4W1YUF&gt; has joined the channel</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>81 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        username                                               text\n",
-       "0   nikhil993477  Nikhil Kumar joined Slack — take a second to s...\n",
-       "1   nikhil993477                                    I am available \n",
-       "2   nikhil993477                              Can we get on a call?\n",
-       "3   nikhil993477                                   I can join now !\n",
-       "4   nikhil993477         <@U05TQLV3ZC4> are you available for meet?\n",
-       "..           ...                                                ...\n",
-       "76  nikhil993477                           I sent her your whatsapp\n",
-       "77  nikhil993477                                      She will text\n",
-       "78  nikhil993477              <@U05TG4W1YUF> has joined the channel\n",
-       "79  nikhil993477              <@U05TG4W1YUF> has joined the channel\n",
-       "80  nikhil993477              <@U05TG4W1YUF> has joined the channel\n",
-       "\n",
-       "[81 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        username                                               text\n",
+      "0   nikhil993477  Nikhil Kumar joined Slack — take a second to s...\n",
+      "1   nikhil993477                                    I am available \n",
+      "2   nikhil993477                              Can we get on a call?\n",
+      "3   nikhil993477                                   I can join now !\n",
+      "4   nikhil993477                 satish are you available for meet?\n",
+      "..           ...                                                ...\n",
+      "76  nikhil993477                           I sent her your whatsapp\n",
+      "77  nikhil993477                                      She will text\n",
+      "78  nikhil993477                nikhil993477 has joined the channel\n",
+      "79  nikhil993477                nikhil993477 has joined the channel\n",
+      "80  nikhil993477                nikhil993477 has joined the channel\n",
+      "\n",
+      "[81 rows x 2 columns]\n"
+     ]
     }
    ],
    "source": [
-    "messages_by_user"
+    "# Create a dictionary of user_id to username mapping\n",
+    "user_dict = dict(zip(user_id_to_name['id'], user_id_to_name['name']))\n",
+    "\n",
+    "# Replace user_id tags with usernames\n",
+    "messages_by_user['text'] = messages_by_user['text'].apply(lambda x: re.sub(r'<@(.*?)>', lambda match: user_dict.get(match.group(1), match.group(0)), x))\n",
+    "\n",
+    "# Print the updated DataFrame\n",
+    "print(messages_by_user)\n"
    ]
   },
   {
