upload zip and output normal files

--- a/notebooks/json_pd_to_csv.ipynb
+++ b/notebooks/json_pd_to_csv.ipynb
@@ -294,6 +294,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'flask_graphql'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32me:\\JUET\\Projects\\kentron-slack-processing\\notebooks\\json_pd_to_csv.ipynb Cell 5\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/JUET/Projects/kentron-slack-processing/notebooks/json_pd_to_csv.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/JUET/Projects/kentron-slack-processing/notebooks/json_pd_to_csv.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mflask\u001b[39;00m \u001b[39mimport\u001b[39;00m Flask, request\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/JUET/Projects/kentron-slack-processing/notebooks/json_pd_to_csv.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mflask_graphql\u001b[39;00m \u001b[39mimport\u001b[39;00m GraphQLView\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/JUET/Projects/kentron-slack-processing/notebooks/json_pd_to_csv.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mgraphene\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/JUET/Projects/kentron-slack-processing/notebooks/json_pd_to_csv.ipynb#W4sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# Define the GraphQL schema\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'flask_graphql'"
+     ]
+    }
+   ],
+   "source": [
+    "import zipfile\n",
+    "import json\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from flask import Flask, request\n",
+    "from flask_graphql import GraphQLView\n",
+    "import graphene\n",
+    "\n",
+    "# Define the GraphQL schema\n",
+    "class Query(graphene.ObjectType):\n",
+    "    pass\n",
+    "\n",
+    "class UploadZip(graphene.Mutation):\n",
+    "    class Arguments:\n",
+    "        file = graphene.Upload(required=True)\n",
+    "\n",
+    "    ok = graphene.Boolean()\n",
+    "    csv_path = graphene.String()\n",
+    "\n",
+    "    def mutate(self, info, file):\n",
+    "        # Specify the directory to extract the zip file to\n",
+    "        extract_directory = '../data4/raw/'\n",
+    "\n",
+    "        # Extract the zip file\n",
+    "        with zipfile.ZipFile(file, 'r') as zip_ref:\n",
+    "            zip_ref.extractall(extract_directory)\n",
+    "\n",
+    "        # Get a list of JSON files in the directory\n",
+    "        json_files = [os.path.join(root, f) for root, _, files in os.walk(extract_directory) for f in files if f.endswith('.json')]\n",
+    "\n",
+    "        # Process each JSON file and convert it to a Pandas DataFrame\n",
+    "        df_list = []\n",
+    "        for json_file in json_files:\n",
+    "            with open(json_file, encoding='utf-8') as f:\n",
+    "                data = json.load(f)\n",
+    "            df = pd.json_normalize(data)\n",
+    "            df_list.append(df)\n",
+    "\n",
+    "        # Concatenate all DataFrames into a single DataFrame\n",
+    "        df = pd.concat(df_list, ignore_index=True)\n",
+    "\n",
+    "        # Save the DataFrame to a CSV file\n",
+    "        csv_file_path = '../data4/csv/normal1.csv'\n",
+    "        df.to_csv(csv_file_path, index=False)\n",
+    "\n",
+    "        return UploadZip(ok=True, csv_path=csv_file_path)\n",
+    "\n",
+    "class Mutation(graphene.ObjectType):\n",
+    "    upload_zip = UploadZip.Field()\n",
+    "\n",
+    "schema = graphene.Schema(query=Query, mutation=Mutation)\n",
+    "\n",
+    "# Create a Flask app\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "# Add a route for the GraphQL endpoint\n",
+    "app.add_url_rule('/graphql', view_func=GraphQLView.as_view('graphql', schema=schema, graphiql=True))\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
