--- a/notebooks/creating_querying_db.ipynb
+++ b/notebooks/creating_querying_db.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -251,28 +251,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            id                 name        real_name\n",
-      "0  U05RA88PCPR                  sam             None\n",
-      "1  U05S28VB3ED                admin             None\n",
-      "2  U05S28X7ETB           payagude.m  Mrunal Payagude\n",
-      "3  U05TG4W1YUF         nikhil993477     Nikhil Kumar\n",
-      "4  U05TQLV3ZC4               satish           Satish\n",
-      "5  U05TTNUB27P           sajals1146            Sajal\n",
-      "6  U05TZ4E0G5A  shubhangisharma2411        Shubhangi\n",
-      "7  U05V4DFEHS8        tanushsethi55    tanushsethi55\n"
+      "            id                 name\n",
+      "0  U05RA88PCPR                  sam\n",
+      "1  U05S28VB3ED                admin\n",
+      "2  U05S28X7ETB           payagude.m\n",
+      "3  U05TG4W1YUF         nikhil993477\n",
+      "4  U05TQLV3ZC4               satish\n",
+      "5  U05TTNUB27P           sajals1146\n",
+      "6  U05TZ4E0G5A  shubhangisharma2411\n",
+      "7  U05V4DFEHS8        tanushsethi55\n"
      ]
     }
    ],
    "source": [
     "query = '''\n",
-    "SELECT id, name, real_name FROM users\n",
+    "SELECT id, name FROM users\n",
     "\n",
     "'''\n",
     "user_id_to_name = query_database(database_file, query)\n",
