--- a/notebooks/messages_retrieve.ipynb
+++ b/notebooks/messages_retrieve.ipynb
@@ -2,31 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV files merged successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "def merge_csv_files(username1, username2):\n",
-    "    # Search for the folder that holds the conversations of the users\n",
+    "def merge_csv_files():\n",
+    "    # Take user input for usernames\n",
+    "    username1 = input(\"Enter username 1: \")\n",
+    "    username2 = input(\"Enter username 2: \")\n",
+    "\n",
+    "    # Read the dms_output.csv file\n",
+    "    dms_data = pd.read_csv('../processed_data/dms_output.csv')\n",
+    "\n",
+    "    # Filter the data based on the usernames\n",
+    "    filtered_data = dms_data[(dms_data['member_1'] == username1) & (dms_data['member_2'] == username2)]\n",
+    "\n",
+    "    if filtered_data.empty:\n",
+    "        print(\"No matching records found\")\n",
+    "        return\n",
+    "\n",
+    "    # Get the folder name from the id column of the matched record\n",
+    "    folder_name = filtered_data.iloc[0]['id']\n",
+    "\n",
+    "    # Search for the folder with the same name\n",
     "    folder_path = None\n",
-    "    for root, dirs, files in os.walk('../csv2/dms.csv'):\n",
-    "        if username1 + '_' + username2 in files:\n",
-    "            folder_path = root\n",
+    "    for root, dirs, files in os.walk('../csv2/'):\n",
+    "        if folder_name in dirs:\n",
+    "            folder_path = os.path.join(root, folder_name)\n",
     "            break\n",
     "\n",
     "    if folder_path is None:\n",
     "        print(\"Folder not found\")\n",
     "        return\n",
-    "\n",
     "    # Merge all the CSV files in the folder\n",
     "    merged_data = pd.DataFrame()\n",
     "    for file in os.listdir(folder_path):\n",
     "        if file.endswith('.csv'):\n",
     "            file_path = os.path.join(folder_path, file)\n",
-    "            df = pd.read_csv(file_path)\n",
+    "            df = pd.read_csv(file_path, usecols=[\"user\", \"text\", \"type\", \"ts\"])\n",
+    "            df['ts'] = pd.to_datetime(df['ts'], unit='s')  # Convert ts column to human-readable timestamp\n",
     "            merged_data = pd.concat([merged_data, df])\n",
     "\n",
     "    # Save the merged data to a new CSV file\n",
@@ -34,13 +59,144 @@
     "    print(\"CSV files merged successfully!\")\n",
     "\n",
     "# Usage example\n",
-    "merge_csv_files('user1', 'user2')\n"
+    "merge_csv_files()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_id_to_username = {\n",
+    "    \"U05RA88PCPR\": \"sam\",\n",
+    "    \"U05S28VB3ED\": \"admin\",\n",
+    "    \"U05S28X7ETB\": \"payagude.m\",\n",
+    "    \"U05TG4W1YUF\": \"nikhil993477\",\n",
+    "    \"U05TQLV3ZC4\": \"satish\",\n",
+    "    \"U05TTNUB27P\": \"sajals1146\",\n",
+    "    \"U05TZ4E0G5A\": \"shubhangisharma2411\",\n",
+    "    \"U05V4DFEHS8\": \"tanushsethi55\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             user                                               text     type  \\\n",
+      "45   nikhil993477  Nikhil Kumar joined Slack — take a second to s...  message   \n",
+      "47   nikhil993477                                    I am available   message   \n",
+      "49   nikhil993477                              Can we get on a call?  message   \n",
+      "52   nikhil993477                                   I can join now !  message   \n",
+      "55   nikhil993477         <@U05TQLV3ZC4> are you available for meet?  message   \n",
+      "59   nikhil993477                                           joining   message   \n",
+      "64   nikhil993477                         What happened with tanush?  message   \n",
+      "65   nikhil993477                               I know one more guy   message   \n",
+      "69   nikhil993477  I will meet with him today and will ask to com...  message   \n",
+      "71   nikhil993477  Okay ! I will share. ! Meeting is already ther...  message   \n",
+      "74   nikhil993477                                              Okay   message   \n",
+      "78   nikhil993477                                  Give me some mins  message   \n",
+      "79   nikhil993477                             I will be joining soon  message   \n",
+      "81   nikhil993477  Yes ! Ofc ! I am trying to set up GCP accordin...  message   \n",
+      "83   nikhil993477                            Do you want to connect?  message   \n",
+      "85   nikhil993477  Hey Satish ! I will be outside during the meet...  message   \n",
+      "86   nikhil993477                                Any update on Ux/Ui  message   \n",
+      "87   nikhil993477  I recently joined one person in my team for UX...  message   \n",
+      "90   nikhil993477                  You hired company just for Ux/Ui?  message   \n",
+      "91   nikhil993477                              Yes ! I am available   message   \n",
+      "94   nikhil993477  Hey Satish ! Please don’t do any harm to Tanus...  message   \n",
+      "95   nikhil993477  And regarding Ux/Ui if you are having problem ...  message   \n",
+      "97   nikhil993477                                              Okayy  message   \n",
+      "98   nikhil993477  Please see my text. Tanush draa huaa h. ! Plea...  message   \n",
+      "102  nikhil993477  Nikhil Kumar joined Slack — take a second to s...  message   \n",
+      "145  nikhil993477  Nikhil Kumar accepted your invitation to join ...  message   \n",
+      "156  nikhil993477                                          kch bolna  message   \n",
+      "165  nikhil993477  Nikhil Kumar joined Slack — take a second to s...  message   \n",
+      "170  nikhil993477  Sign-in/Sign-up, User data, Tenant, Connectors...  message   \n",
+      "\n",
+      "                                ts  \n",
+      "45   2023-09-26 05:32:23.017599232  \n",
+      "47   2023-09-27 05:01:27.891899136  \n",
+      "49   2023-09-28 05:14:10.029928960  \n",
+      "52   2023-09-28 05:21:46.482639104  \n",
+      "55   2023-10-01 16:21:30.472028928  \n",
+      "59   2023-10-01 16:43:49.351479040  \n",
+      "64   2023-10-06 05:44:58.320308992  \n",
+      "65   2023-10-06 05:45:16.791439104  \n",
+      "69   2023-10-06 06:08:44.409858816  \n",
+      "71   2023-10-06 06:12:26.890338816  \n",
+      "74   2023-10-06 06:13:45.623538944  \n",
+      "78   2023-10-09 05:06:53.651928832  \n",
+      "79   2023-10-09 05:06:57.936299008  \n",
+      "81   2023-10-09 05:09:31.181458944  \n",
+      "83   2023-10-11 05:30:52.125108992  \n",
+      "85   2023-10-13 05:09:26.396478976  \n",
+      "86   2023-10-13 17:40:23.435548928  \n",
+      "87   2023-10-13 17:41:08.535368960  \n",
+      "90   2023-10-13 20:44:26.762168832  \n",
+      "91   2023-10-13 20:44:42.089768960  \n",
+      "94   2023-10-16 05:10:18.230909184  \n",
+      "95   2023-10-16 05:10:27.125339136  \n",
+      "97   2023-10-16 05:11:43.071019008  \n",
+      "98   2023-10-16 05:13:10.504539136  \n",
+      "102  2023-09-26 05:32:24.171399168  \n",
+      "145  2023-09-26 05:32:21.666639104  \n",
+      "156  2023-09-28 06:09:05.090758912  \n",
+      "165  2023-09-26 05:32:24.257199104  \n",
+      "170  2023-10-10 06:25:15.174798848  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the merged_msg.csv file\n",
+    "merged_data = pd.read_csv('merged_msg.csv')\n",
+    "\n",
+    "# Take user input for username\n",
+    "username = input(\"Enter username: \")\n",
+    "\n",
+    "# Replace user_id with username in user column\n",
+    "merged_data['user'] = merged_data['user'].replace(user_id_to_username)\n",
+    "\n",
+    "# Filter the data based on the username\n",
+    "filtered_data = merged_data[merged_data['user'] == username]\n",
+    "\n",
+    "# Print the filtered messages\n",
+    "print(filtered_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
