--- a/notebooks/json_pd_to_csv.ipynb
+++ b/notebooks/json_pd_to_csv.ipynb
@@ -374,10 +374,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zipfile\n",
+    "import json\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from fastapi import FastAPI, UploadFile\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "@app.post(\"/process_zip\")\n",
+    "async def process_zip(file: UploadFile):\n",
+    "    # Specify the directory to extract the zip file to\n",
+    "    extract_directory = '../data4/raw/'\n",
+    "\n",
+    "    # Save the zip file\n",
+    "    zip_file_path = os.path.join(extract_directory, file.filename)\n",
+    "    with open(zip_file_path, 'wb') as f:\n",
+    "        f.write(await file.read())\n",
+    "\n",
+    "    # Extract the zip file\n",
+    "    with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
+    "        zip_ref.extractall(extract_directory)\n",
+    "\n",
+    "    # Get a list of JSON files in the directory\n",
+    "    json_files = [os.path.join(root, f) for root, _, files in os.walk(extract_directory) for f in files if f.endswith('.json')]\n",
+    "\n",
+    "    # Process each JSON file and convert it to a Pandas DataFrame\n",
+    "    df_list = []\n",
+    "    for json_file in json_files:\n",
+    "        with open(json_file, encoding='utf-8') as f:\n",
+    "            data = json.load(f)\n",
+    "        df = pd.json_normalize(data)\n",
+    "        df_list.append(df)\n",
+    "\n",
+    "    # Concatenate all DataFrames into a single DataFrame\n",
+    "    df = pd.concat(df_list, ignore_index=True)\n",
+    "\n",
+    "    # Save the DataFrame to a CSV file\n",
+    "    csv_file_path = '../data4/csv/normal1.csv'\n",
+    "    df.to_csv(csv_file_path, index=False)\n",
+    "\n",
+    "    return {\"message\": \"Zip file processed successfully\", \"csv_path\": csv_file_path}\n",
+    "\n",
+    "@app.get(\"/create_user_mapping\")\n",
+    "async def create_user_mapping():\n",
+    "    # Read the users.csv file\n",
+    "    csv_file_path = '../csv/users.csv'\n",
+    "    df = pd.read_csv(csv_file_path)\n",
+    "\n",
+    "    # Create a dictionary for mapping user_id with username\n",
+    "    user_mapping = df.set_index('user_id')['username'].to_dict()\n",
+    "\n",
+    "    return {\"user_mapping\": user_mapping}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Read the CSV file\n",
+    "df = pd.read_csv('../data3/csv/normal1.csv')\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "df.columns\n"
+   ]
   }
  ],
  "metadata": {
