--- a/notebooks/all_essential_code.ipynb
+++ b/notebooks/all_essential_code.ipynb
@@ -300,11 +300,136 @@
     "\n",
     "    return {\"message\": \"Two user messages created successfully\"}\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write basic code to connect with postgresql database\n",
+    "import psycopg2\n",
+    "\n",
+    "# Establish a connection to the PostgreSQL database\n",
+    "conn = psycopg2.connect(\n",
+    "    host=\"localhost\",\n",
+    "    database=\"kentron\",\n",
+    "    port = 5433,\n",
+    "    user=\"postgres\",\n",
+    "    password=\"Kingfr@ncesco015\"\n",
+    ")\n",
+    "\n",
+    "# Create a cursor\n",
+    "# cursor = conn.cursor()\n",
+    "\n",
+    "# # Execute a query\n",
+    "# cursor.execute(\"SELECT * FROM users\")\n",
+    "\n",
+    "# # Retrieve query results\n",
+    "# records = cursor.fetchall()\n",
+    "\n",
+    "# # Print the records\n",
+    "# for record in records:\n",
+    "#     print(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write code to create a table users with sample data and then retrieve the data and the delete the table\n",
+    "\n",
+    "# Create a cursor\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Execute a query\n",
+    "cursor.execute(\"CREATE TABLE IF NOT EXISTS users (id SERIAL PRIMARY KEY, name VARCHAR, age INTEGER)\")\n",
+    "\n",
+    "# Insert a record\n",
+    "# cursor.execute(\"INSERT INTO users (name, age) VALUES (%s, %s)\", (\"John\", 25))\n",
+    "\n",
+    "# Retrieve query results\n",
+    "cursor.execute(\"SELECT * FROM users\")\n",
+    "\n",
+    "# Retrieve query results\n",
+    "records = cursor.fetchall()\n",
+    "\n",
+    "# Print the records\n",
+    "for record in records:\n",
+    "    print(record)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Delete a record\n",
+    "cursor.execute(\"DELETE FROM users WHERE name = %s\", (\"John\",))\n",
+    "\n",
+    "# Drop table\n",
+    "cursor.execute(\"DROP TABLE users\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.commit()\n",
+    "cursor.close()\n",
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<connection object at 0x0000022680B53BF0; dsn: 'user=postgres password=xxx dbname=kentron host=localhost port=5433', closed: 1>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
