--- a/notebooks/json_pd_to_csv.ipynb
+++ b/notebooks/json_pd_to_csv.ipynb
@@ -429,7 +429,7 @@
     "    # Create a dictionary for mapping user_id with username\n",
     "    user_mapping = df.set_index('user_id')['username'].to_dict()\n",
     "\n",
-    "    return {\"user_mapping\": user_mapping}\n"
+    "    return {\"user_mapping\": user_mapping}"
    ]
   },
   {
