--- a/notebooks/all_essential_code.ipynb
+++ b/notebooks/all_essential_code.ipynb
@@ -407,6 +407,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastapi import FastAPI, UploadFile\n",
+    "import os\n",
+    "import zipfile\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "\n",
+    "app = FastAPI()\n",
+    "\n",
+    "@app.post(\"/extract_and_convert\")\n",
+    "async def extract_and_convert(file: UploadFile):\n",
+    "    # Specify the directory to extract the zip file to\n",
+    "    extract_directory = '../data4/raw/'\n",
+    "\n",
+    "    # Save the zip file\n",
+    "    zip_file_path = os.path.join(extract_directory, file.filename)\n",
+    "    with open(zip_file_path, 'wb') as f:\n",
+    "        f.write(await file.read())\n",
+    "\n",
+    "    # Extract the zip file\n",
+    "    with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
+    "        zip_ref.extractall(extract_directory)\n",
+    "\n",
+    "    # Get a list of JSON files in the directory\n",
+    "    json_files = [os.path.join(root, f) for root, _, files in os.walk(extract_directory) for f in files if f.endswith('.json')]\n",
+    "\n",
+    "    # Process each JSON file and convert it to a Pandas DataFrame\n",
+    "    df_list = []\n",
+    "    for json_file in json_files:\n",
+    "        with open(json_file, encoding='utf-8') as f:\n",
+    "            data = json.load(f)\n",
+    "        df = pd.json_normalize(data)\n",
+    "        df_list.append(df)\n",
+    "\n",
+    "        # Convert JSON file to CSV\n",
+    "        csv_file = os.path.splitext(json_file)[0] + '.csv'\n",
+    "        df.to_csv(csv_file, index=False)\n",
+    "\n",
+    "    # Concatenate all DataFrames into a single DataFrame\n",
+    "    df = pd.concat(df_list, ignore_index=True)\n",
+    "\n",
+    "    return {\"message\": \"Files extracted and converted successfully.\"}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
