--- a/notebooks/all_essential_code.ipynb
+++ b/notebooks/all_essential_code.ipynb
@@ -411,14 +411,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastapi import FastAPI, UploadFile\n",
-    "import os\n",
-    "import zipfile\n",
-    "import json\n",
-    "import pandas as pd\n",
-    "\n",
-    "app = FastAPI()\n",
-    "\n",
     "@app.post(\"/extract_and_convert\")\n",
     "async def extract_and_convert(file: UploadFile):\n",
     "    # Specify the directory to extract the zip file to\n",
@@ -451,7 +443,59 @@
     "    # Concatenate all DataFrames into a single DataFrame\n",
     "    df = pd.concat(df_list, ignore_index=True)\n",
     "\n",
-    "    return {\"message\": \"Files extracted and converted successfully.\"}\n"
+    "    # Read the channels.csv file\n",
+    "    channels_df = pd.read_csv('../data4/raw/channels.csv')\n",
+    "\n",
+    "    # Select the desired columns\n",
+    "    channel_info_df = channels_df[['id', 'name', 'is_general', 'creator', 'created', 'members', 'is_archived']]\n",
+    "\n",
+    "    # Specify the directory to save the channel_info.csv file\n",
+    "    save_directory = '../data4/processed/'\n",
+    "\n",
+    "    # Save the channel_info DataFrame to a CSV file\n",
+    "    channel_info_df.to_csv(os.path.join(save_directory, 'channel_info.csv'), index=False)\n",
+    "\n",
+    "    # Read the users.csv file\n",
+    "    users_df = pd.read_csv('../data4/raw/users.csv')\n",
+    "\n",
+    "    # Select the desired columns\n",
+    "    users_info_df = users_df[['id', 'team_id', 'name', 'deleted', 'is_bot', 'is_app_user', 'updated']]\n",
+    "\n",
+    "    # Save the users_info DataFrame to a CSV file\n",
+    "    users_info_df.to_csv(os.path.join(save_directory, 'users_info.csv'), index=False)\n",
+    "\n",
+    "    # Create a dictionary to map id and name\n",
+    "    id_name_mapping = dict(zip(users_info_df['id'], users_info_df['name']))\n",
+    "\n",
+    "    # Define the directory path\n",
+    "    directory_path = \"../data4/raw/\"\n",
+    "\n",
+    "    # Define the column names\n",
+    "    column_names = [\"user\", \"text\", \"type\", \"ts\"]\n",
+    "\n",
+    "    # Create an empty dataframe\n",
+    "    df = pd.DataFrame(columns=column_names)\n",
+    "\n",
+    "    # Loop through all subdirectories starting with \"D05\"\n",
+    "    for subdir, dirs, files in os.walk(directory_path):\n",
+    "        if subdir.startswith(directory_path + \"D05\"):\n",
+    "            for file in files:\n",
+    "                if file.endswith(\".csv\"):\n",
+    "                    # Read the csv file\n",
+    "                    file_path = os.path.join(subdir, file)\n",
+    "                    temp_df = pd.read_csv(file_path)\n",
+    "                    \n",
+    "                    # Check if all required columns are present\n",
+    "                    if all(col in temp_df.columns for col in column_names):\n",
+    "                        # Append the dataframe to the main dataframe\n",
+    "                        df = df.append(temp_df[column_names], ignore_index=True)\n",
+    "\n",
+    "    df['ts'] = pd.to_datetime(df['ts'], unit='s')\n",
+    "\n",
+    "    # Save the dataframe to a csv file\n",
+    "    df.to_csv(\"../data4/processed/merged_msg.csv\", index=False)\n",
+    "\n",
+    "    return {\"message\": \"Files extracted and converted successfully.\", \"id_name_mapping\": id_name_mapping}\n"
    ]
   },
   {
