--- a/notebooks/all_essential_code.ipynb
+++ b/notebooks/all_essential_code.ipynb
@@ -469,8 +469,6 @@
     "\n",
     "    # Define the directory path\n",
     "    directory_path = \"../data4/raw/\"\n",
-    "\n",
-    "    # Define the column names\n",
     "    column_names = [\"user\", \"text\", \"type\", \"ts\"]\n",
     "\n",
     "    # Create an empty dataframe\n",
@@ -496,6 +494,89 @@
     "    df.to_csv(\"../data4/processed/merged_msg.csv\", index=False)\n",
     "\n",
     "    return {\"message\": \"Files extracted and converted successfully.\", \"id_name_mapping\": id_name_mapping}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'message': 'Files added to PostgreSQL database successfully.'}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import psycopg2\n",
+    "# Establish a connection to the PostgreSQL database\n",
+    "conn = psycopg2.connect(\n",
+    "    host=\"localhost\",\n",
+    "    database=\"kentron\",\n",
+    "    user=\"postgres\",\n",
+    "    password=\"Kingfr@ncesco015\"\n",
+    ")\n",
+    "\n",
+    "# Create a cursor\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Specify the directory containing the processed files\n",
+    "processed_directory = '../data4/processed/'\n",
+    "\n",
+    "# Get a list of CSV files in the directory\n",
+    "csv_files = [os.path.join(processed_directory, f) for f in os.listdir(processed_directory) if f.endswith('.csv')]\n",
+    "\n",
+    "# Iterate through each CSV file\n",
+    "for csv_file in csv_files:\n",
+    "    # Read the CSV file\n",
+    "    df = pd.read_csv(csv_file)\n",
+    "\n",
+    "    # Get the table name from the file name\n",
+    "    table_name = os.path.splitext(os.path.basename(csv_file))[0]\n",
+    "\n",
+    "    # Create the table in the database if it doesn't exist\n",
+    "    create_table_query = f\"CREATE TABLE IF NOT EXISTS {table_name} (\"\n",
+    "    for column in df.columns:\n",
+    "        column_type = df[column].dtype\n",
+    "        if column_type == 'int64':\n",
+    "            create_table_query += f\"{column} INTEGER,\"\n",
+    "        elif column_type == 'float64':\n",
+    "            create_table_query += f\"{column} FLOAT,\"\n",
+    "        elif column_type == 'bool':\n",
+    "            create_table_query += f\"{column} BOOLEAN,\"\n",
+    "        else:\n",
+    "            create_table_query += f'\"{column}\" VARCHAR,'  # Change the column name to be enclosed in double quotes\n",
+    "    create_table_query = create_table_query.rstrip(',') + \")\"\n",
+    "    cursor.execute(create_table_query)\n",
+    "\n",
+    "        # Replace NaN values with None\n",
+    "    df = df.where(pd.notnull(df), None)\n",
+    "\n",
+    "    # Insert the data into the table\n",
+    "    for index, row in df.iterrows():\n",
+    "        insert_query = f\"INSERT INTO {table_name} VALUES (\"\n",
+    "        for value in row.values:\n",
+    "            if value is None:\n",
+    "                value = 'None'  # Replace None with the string 'None'\n",
+    "            elif isinstance(value, str):\n",
+    "                # Escape single quotes in the string\n",
+    "                value = value.replace(\"'\", \"''\")\n",
+    "            insert_query += f\"'{value}',\"\n",
+    "        insert_query = insert_query.rstrip(',') + \")\"\n",
+    "        cursor.execute(insert_query)\n",
+    "\n",
+    "# Commit the changes\n",
+    "conn.commit()\n",
+    "\n",
+    "# Return the result\n",
+    "{\"message\": \"Files added to PostgreSQL database successfully.\"}\n"
    ]
   },
   {
